--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "node": ">=22.3"
   },
   "dependencies": {
-    "fancy-canvas": "~2.1.0"
+    "fancy-canvas": "2.1.0"
   },
   "devDependencies": {
     "@juggle/resize-observer": "3.4.0",
