--- a/website/package.json
+++ b/website/package.json
@@ -37,7 +37,7 @@
     "vue": "3.5.13"
   },
   "devDependencies": {
-    "@tsconfig/docusaurus": "^2.0.3",
+    "@tsconfig/docusaurus": "2.0.3",
     "typedoc-plugin-frontmatter": "1.0.0"
   }
 }
