--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-package-lock=false
+package-lock=true
 legacy-peer-deps=true
 engine-strict=false # memlab doesn't explictly mention node v22 yet.
 prefer-dedupe=true
