--- a/plugin-examples/package.json
+++ b/plugin-examples/package.json
@@ -8,13 +8,13 @@
         "build:examples:site": "vite build --config src/vite.config.js && node build-website.mjs"
     },
     "devDependencies": {
-        "typescript": "^5.4.5",
-        "vite": "^5.3.0"
+        "typescript": "5.5.4",
+        "vite": "^6.3.4"
     },
     "dependencies": {
         "dts-bundle-generator": "^9.5.1",
         "fancy-canvas": "^2.1.0",
-        "globby": "^14.0.1",
+        "globby": "^14.1.0",
         "lightweight-charts": "file:.."
     }
 }
