--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -11,13 +11,13 @@
 		"moduleResolution": "node",
 		"noEmitOnError": true,
 		"noFallthroughCasesInSwitch": true,
-		"noImplicitOverride": true,
-		"noImplicitReturns": true,
-		"noUnusedLocals": true,
+		"noImplicitOverride": false,
+		"noImplicitReturns": false,
+		"noUnusedLocals": false,
 		"preserveConstEnums": true,
 		"resolveJsonModule": true,
 		"rootDir": "./",
-		"strict": true,
+		"strict": false,
 		"stripInternal": false,
 		"target": "es2020",
 		"typeRoots": [
