--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -4,7 +4,7 @@
 		"outDir": "lib/prod",
 		"plugins": [
 			{ "transform": "ts-transformer-strip-const-enums", "entrySourceFiles": ["./src/index.ts"] },
-			{ "transform": "ts-transformer-properties-rename", "entrySourceFiles": ["./src/index.ts"] }
+			// { "transform": "ts-transformer-properties-rename", "entrySourceFiles": ["./src/index.ts"] }
 		],
 		"stripInternal": true
 	},
