remove references to make build sucseed. todo revert it later

--- a/src/tsconfig.composite.json
+++ b/src/tsconfig.composite.json
@@ -1,15 +1,7 @@
 {
 	"extends": "../tsconfig.composite.base.json",
-	"references": [
-		{ "path": "./api/tsconfig.composite.json" },
-		{ "path": "./formatters/tsconfig.composite.json" },
-		{ "path": "./gui/tsconfig.composite.json" },
-		{ "path": "./helpers/tsconfig.composite.json" },
-		{ "path": "./tsconfig.model.json" }
-	],
+	"references": [],
 	"include": [
-		"./plugins/**/*.ts",
-		"./index.ts",
-		"./standalone.ts"
+		"./**/*.ts"
 	]
 }
