--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,17 @@
 {
     "version": "0.2.0",
     "configurations": [
+        
+        {
+            "name": "Electron Main",
+            "program": "${workspaceFolder}/main.js",
+            "request": "launch",
+            "runtimeExecutable": "electron",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
         {
             "type": "node-terminal",
             "request": "launch",
