Update Vite and related dependencies to latest versions
Upgraded Vite to 7.2.0 and updated related dependencies and lockfiles across multiple packages for improved compatibility and features. Also bumped create-lwc-plugin to version 0.1.3 and fixed a minor unused parameter warning in template-primitive.

--- a/indicator-examples/package.json
+++ b/indicator-examples/package.json
@@ -9,7 +9,7 @@
     },
     "devDependencies": {
         "typescript": "5.5.4",
-        "vite": "^6.3.4"
+        "vite": "7.2.0"
     },
     "dependencies": {
         "dts-bundle-generator": "^9.5.1",
