--- a/packages/create-lwc-plugin/template-common/package.json
+++ b/packages/create-lwc-plugin/template-common/package.json
@@ -6,8 +6,8 @@
         "compile": "tsc && node compile.mjs"
     },
     "devDependencies": {
-        "typescript": "^5.0.4",
-        "vite": "^4.3.1"
+        "typescript": "5.5.4",
+        "vite": "7.2.0"
     },
     "dependencies": {
         "dts-bundle-generator": "^8.0.1",
