--- a/plugin-examples/package.json
+++ b/plugin-examples/package.json
@@ -12,9 +12,9 @@
         "vite": "7.2.0"
     },
     "dependencies": {
-        "dts-bundle-generator": "^9.5.1",
-        "fancy-canvas": "^2.1.0",
-        "globby": "^14.1.0",
+        "dts-bundle-generator": "9.5.1",
+        "fancy-canvas": "2.1.0",
+        "globby": "14.1.0",
         "lightweight-charts": "file:.."
     }
 }
