--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tradingview/lightweight-charts.git"
+    "url": "https://github.com/tradingview/lightweight-charts.git"
   },
   "type": "module",
   "module": "dist/lightweight-charts.production.mjs",
